<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/main_layout_padding">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/img_main_page"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fl_start"/>

    <FrameLayout
        android:id="@+id/fl_start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="Start Button"
        app:layout_constraintTop_toBottomOf="@id/ivMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circular_accent_color_border_ripple_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_bmi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="BMI Button"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fl_history"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circular_accent_color_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/tvCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fl_bmi"
        app:layout_constraintEnd_toEndOf="@id/fl_bmi"
        app:layout_constraintStart_toStartOf="@id/fl_bmi"
        />

    <FrameLayout
        android:id="@+id/fl_history"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="History Button"
        app:layout_constraintTop_toBottomOf="@id/fl_start"
        app:layout_constraintStart_toEndOf="@id/fl_bmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/circular_accent_color_background">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_calendar"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fl_history"
        app:layout_constraintStart_toStartOf="@id/fl_history"
        app:layout_constraintEnd_toEndOf="@id/fl_history"
        />

</androidx.constraintlayout.widget.ConstraintLayout>