<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMI"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        app:titleTextColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbarBMI"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:text="METRIC UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:text="US UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>


    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightMetricTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightMetricTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightMetricTextInput"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightUSTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits"
        android:visibility="gone"
        tools:visibility = "visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_pound"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feetUSTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightUSTextInput"
        app:layout_constraintEnd_toStartOf="@id/inchUSTextInput"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSFeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inchUSTextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightUSTextInput"
        app:layout_constraintStart_toEndOf="@id/feetUSTextInput"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUSInch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inch"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_bmi_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/heightMetricTextInput"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your BMI"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="15.00"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tvBMIDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Normal"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="5dp"/>
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/calculate"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:background="@color/colorAccent"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_bmi_result"/>

</androidx.constraintlayout.widget.ConstraintLayout>